screen: Fix for gnome-settings-daemon changes

g-s-d changed its DBus interface, and that made all
external changes to brightness invisible to the panel. Update
accordingly.

https://bugzilla.gnome.org/show_bug.cgi?id=662117